<resources>
    <string name="app_name">Call Color Flash </string>
    <string name="facebook_app_id">1205962693239181</string>
    <string name="fb_login_protocol_scheme">fb1205962693239181</string>
    <string name="lovely">Lovely</string>
    <string name="mytheme">My Theme</string>
    <string name="nope">Nope</string>
    <string name="policy">Privacy policy</string>
    <string name="popular">Popular</string>
    <string name="questionApply">Apply for all contact</string>
    <string name="recommend">Recommend for you</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">Setting</string>
    <string name="shareApp">Share app</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sure">Sure, i want</string>
    <string name="video_alert">The maximum length of videos is 10 seconds</string>
    <string name="video_not_found">Video not found</string>
    <string name="your_video">Open camera or select a new video</string>
    <string name="addYourVideo">Create your video or image</string>
    <string name="applyContact">Apply for all contact</string>
    <string name="checkUpdate">Check for update</string>
    <string name="colorCall">Color Call</string>
    <string name="colorEffect">Color effect</string>
    <string name="contentApply">Call screen of all contacts will be applied</string>
    <string name="getVip">Get VIP</string>
    <string name="overlay_permision">Permission dialog</string>
    <string name="overlay_permision_content">Please allow drawing call screen on other applications</string>
    <string name="ok">OK</string>
    <string name="turn_on_notifi">Allows access to the notification to answer the call in call screen</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="video">Video</string>
    <string name="images">Images</string>
    <string name="select_picture">Select new picture</string>
    <string name="questionDelete">Delete this background?</string>
    <string name="contentDelete">Are you sure delete background?</string>
    <string name="apply_done">Completed</string>
    <string name="callerscreen">Caller screen</string>
    <string name="ledFlash">LED Flash</string>
    <string name="contentSplash">Colorful incoming call display</string>
    <string name="start">Start</string>
    <string name="applying">Applying ...</string>
    <string name="applied">Applied</string>
    <string name="loading">Loading ...</string>
    <string name="caller">Caller</string>
    <string name="videos">Videos</string>
    <string name="download">Download</string>
    <string name="downloadSuccess">Download success</string>
    <string name="err_network">Request failed, please check the network</string>
    <string name="down_err">Download error. No network connection!</string>
    <string name="turn_on_network">Connection errors! Please turn on the internet connection to update the latest themes</string>
    <string name="downloading">Downloading ...</string>
    <string name="file_not_found">File not found</string>
    <string name="unknowContact">Unknow contact</string>
    <string name="select_contact">Select contact</string>
    <string name="set">Set</string>
    <string name="search">Search ...</string>
    <string name="selectAll">Select all</string>
    <string name="set_theme_success">Set theme successfully</string>
    <string name="titleDrawrOver">To show call screen</string>
    <string name="titleNotification">To answer the call in call screen and show phone number</string>
    <string name="prompt_permission_draw_window_msg">Screen Permission</string>
    <string name="prompt_permission_notification_msg">Notification Access</string>
    <string name="rateApp">Rate app</string>
    <string name="allow_permission">Grant permission for Call color flash</string>
    <string name="go_to_setting">Go setting</string>
    <string name="rateInGGPlay">Reviews on Google Play</string>
    <string name="ask_user_feedback">What do you want to improve?</string>
    <string name="moreVideo">More videos</string>
    <string name="moreImage">More pictures</string>
    <string name="leastAds">Less ads</string>
    <string name="moreAudio">More ringtones</string>
    <string name="another">Another idea</string>
    <string name="feedBackForDeveloper">Feedback to the developer</string>
    <string name="giveStar">Please click the number of stars you give us</string>
    <string name="very_bad">Very bad</string>
    <string name="bad">Bad</string>
    <string name="normal">Normal</string>
    <string name="good">Good</string>
    <string name="very_good">Very good</string>
    <string name="notNow">Not now</string>
    <string name="skip_ads">Skip</string>
    <string name="notify_msg_foreground">Call Screen is running</string>
    <string name="gdpr_content">Personalise ads using personal data</string>
    <string name="explain_service" translatable="false">The app uses the foreground service to listen for incoming call status, then displays the call color screen, even if the user exits the app. Without using foreground service, the core features of the application cannot work</string>
    <string name="audio_route_speaker">Speaker</string>
    <string name="audio_route_earpiece">Earpiece</string>
    <string name="audio_route_bluetooth">Bluetooth</string>
    <string name="audio_route_wired_headset">Wired Headset</string>
    <string name="audio_route_wired_or_earpiece">Wired or Earpiece</string>
    <string name="is_calling">Is Calling…</string>
    <string name="dialing">Dialing…</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_ending">Call Ending</string>
    <string name="ongoing_call">Ongoing Call</string>
    <string name="conference">Conference</string>
    <string name="call_on_hold">On Hold</string>
    <string name="turn_microphone_on">Turn microphone on</string>
    <string name="turn_microphone_off">Turn microphone off</string>
    <string name="turn_speaker_on">Turn speaker on</string>
    <string name="turn_speaker_off">Turn speaker off</string>
    <string name="show_dialpad">Show dialpad</string>
    <string name="hide_dialpad">Hide dialpad</string>
    <string name="end_call">End call</string>
    <string name="hold_call">Hold call</string>
    <string name="resume_call">Resume call</string>
    <string name="call_add">Add call</string>
    <string name="conference_manage">Manage conference call</string>
    <string name="call_swap">Swap calls</string>
    <string name="call_merge">Merge calls</string>
    <string name="call_split">Split call</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="choose_audio_route">Choose audio route</string>
    <string name="unset_default_sim">Unset default SIM</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="unblock_contact">Unblock contact</string>
    <string name="unblock_contact_fail">Contact could not be unblocked</string>
    <string name="unblock_contact_success">Contact unblocked</string>
    <string name="block_contact">Block contact</string>
    <string name="block_contact_fail">Contact could not be blocked</string>
    <string name="block_contact_success">Contact blocked</string>
    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
    <string name="deletion_confirmation">Are you sure you want to delete %s?</string>
    <string name="deletion_confirmation_short">Delete %s?</string>
    <string name="select_sim">Select SIM</string>
    <string name="always_use_this_sim">Always use this SIM for this number</string>
    <string name="permistion_not_default_dialer">Default Dialer permission is required for this feature.</string>
    <string name="color_call_dialer">Color Call Dialer</string>
    <string name="request_permission">Request permission</string>
    <string name="request_permission_for_feature">The application cannot work if you do not grant enough permissions. Please grant permissions again!</string>
    <string name="request_permission_xiaomi_content">Để ứng dụng có thể hoạt động bình thường, bạn cần cho phép các quyền dưới đây</string>
    <string name="step1">Step 1: Open \"Other permissions\"</string>
    <string name="other_pemissions">Other pemissions</string>
    <string name="step2">Step 2: Enable \"Show on Lock screen\", \"Home screen shortcut\" and \"Open new windows while running in background\"</string>
    <string name="show_on_lock_screen">Show on lock screen</string>
    <string name="open_new_window">Open new windows while running in background</string>
    <string name="home_screen_short">Home screen shortcut</string>
    <string name="open_settings">Open settings</string>
    <string name="must_make_default_caller_id_app">Can\'t block unknown numbers without caller ID permission.</string>
    <string name="show_call_details">Show call details</string>
    <string name="clear_call_history">Clear call history</string>
    <string name="clear_history_confirmation">Are you sure you want to remove everything from the Call History?</string>
    <string name="cannot_be_undone">This action cannot be undone.</string>
    <string name="contacts_tab">Contacts</string>
    <string name="favorites_tab">Favorites</string>
    <string name="call_history_tab">Call History</string>
    <string name="request_access">Request access</string>
    <string name="no_previous_calls">No previous calls have been found</string>
    <string name="sort_by">Sort by</string>
    <string name="dialpad">Diapad</string>
    <string name="block_number">Block number</string>
    <string name="remove_confirmation">Are you sure you want to remove the selected items from the Call History?</string>
    <string name="could_not_access_the_call_history">Could not access the call history</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="could_not_access_contacts">Could not access your contacts</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="calling_blocked_number">The number you are calling is blocked</string>
    <string name="default_phone_app_prompt">Please make this app the default Phone app</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="this_action_can_show_ads">This action may contain ads</string>
    <string name="title_ob1">Your unique call screen</string>
    <string name="des_ob1">The call screen is extremely outstanding with both videos and images</string>
    <string name="title_ob2">Easy to use</string>
    <string name="des_ob2">Enable permissions and experience your dialer</string>
    <string name="please_allow_call_dialer">Please allow Call Color Screen to display incomming calls</string>
    <string name="title_paywall_no_ads">Tired of annoying ads?</string>
    <string name="content_1_paywall_no_ads">Go ad-free with a clean, uninterrupted app experience.</string>
    <string name="buy_now">Buy Now</string>
</resources>