<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:aapt="http://schemas.android.com/aapt"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questionApply"
        android:textColor="@color/colorTextApp"
        android:textSize="@dimen/_19sdp"
        app:fontFamily="@font/roboto_medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/contentApply"
        android:textColor="@color/colorTextApp"
        android:textSize="@dimen/_14sdp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_20sdp">

        <TextView
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nope"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15sdp"
            app:fontFamily="@font/roboto_medium" />

        <TextView
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/sure"
            android:textAllCaps="true"
            android:textColor="@color/colorHeaderMain"
            android:textSize="@dimen/_15sdp"
            app:fontFamily="@font/roboto_medium" />
    </RelativeLayout>
</LinearLayout>
</RelativeLayout>
