<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoregular"
            android:text="@string/contentDelete"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:textColor="#de000000"
            android:gravity="center"
            android:textSize="16sp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            >
            <TextView
                android:id="@+id/btnNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="@font/roboto_medium"
                android:text="@string/nope"
                android:textAllCaps="true"
                android:textColor="#b1b1b1"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/roboto_medium"
                android:text="@string/sure"
                android:textAllCaps="true"
                android:layout_alignParentEnd="true"
                android:textColor="#2597f5"
                android:textSize="18sp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>