<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root"
    android:gravity="center"
    android:background="@drawable/bg_white_radius10">
    <ImageView
        android:id="@+id/imgExit"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        app:srcCompat="@drawable/ic_exit"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:visibility="gone"/>
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_below="@id/imgExit"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_15sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/iconapp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@mipmap/ic_launcher"
                android:visibility="gone"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/titleRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bạn có thích Color Call Flash không?"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:layout_below="@id/iconapp"
                android:gravity="center" />

            <TextView
                android:id="@+id/feedbackRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rất hài lòng"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="#0038A5"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_below="@id/titleRate"
                android:gravity="center" />

            <RatingBar
                android:id="@+id/rb_vvm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_below="@id/feedbackRate"
                android:numStars="5"
                android:stepSize="1"
                android:rating="5"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/_40sdp" />

            <com.colorcall.callerscreen.custom.RatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                app:progress="@drawable/star_not_select"
                app:progressed="@drawable/star_select"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_below="@id/feedbackRate"
                android:clickable="true"
                app:numStars="5"
                app:rating="0"
                app:stepSize="1"
                app:spacing="@dimen/_15sdp"
                app:isIndicator="false"
                app:automatic="manual"
                android:focusable="true" />
            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@id/ratingbar"
                android:layout_centerHorizontal="true"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_user_feedback"
                    android:textColor="#292929"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/moreVideo"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/moreVideo"
                            android:gravity="center"
                            android:textColor="#292929"
                            android:background="@drawable/bg_feedback_unselect"
                            android:textSize="@dimen/_11sdp"
                            android:paddingTop="@dimen/_3sdp"
                            android:paddingBottom="@dimen/_3sdp"
                            />
                        <TextView
                            android:id="@+id/moreImage"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/moreImage"
                            android:gravity="center"
                            android:textColor="#292929"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_3sdp"
                            android:paddingBottom="@dimen/_3sdp"
                            android:background="@drawable/bg_feedback_unselect"
                            android:textSize="@dimen/_11sdp"
                            />
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp">
                    <TextView
                        android:id="@+id/leastAds"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/leastAds"
                        android:textColor="#292929"
                        android:background="@drawable/bg_feedback_unselect"
                        android:textSize="@dimen/_11sdp"
                        android:gravity="center"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        />
                    <TextView
                        android:id="@+id/moreAudio"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/moreAudio"
                        android:textColor="#292929"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="center"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:background="@drawable/bg_feedback_unselect"
                        android:textSize="@dimen/_11sdp"
                        />
                </LinearLayout>

                <EditText
                    android:id="@+id/txtAnotherFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11sdp"
                    android:lines="1"
                    android:ellipsize="end"
                    android:imeOptions="actionDone"
                    android:hint="@string/another"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <TextView
                    android:id="@+id/btnFeedBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/feedBackForDeveloper"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:background="@drawable/bg_feedback_select"
                    android:textSize="@dimen/_12sdp"
                    />
                <TextView
                    android:id="@+id/btnNotNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/notNow"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:background="@drawable/bg_feedback_unselect"
                    android:textSize="@dimen/_12sdp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/txtRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rateInGGPlay"
                android:textColor="@color/white"
                android:layout_below="@id/ratingbar"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_radius_20_blue"
                android:paddingStart="@dimen/_30sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:textSize="@dimen/_13sdp"
                android:visibility="gone"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>